<resources>
    <string name="app_name">Glass Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Glass Management</string>
    <string name="nav_header_subtitle">Gestión del taller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_management_accidents">Gestión de Siniestros</string>
    <string name="menu_management_clients">Gestión de Clientes</string>
    <string name="menu_calendar">Calendario</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="textView_logout">¿Está seguro de querer cerrar sesión?</string>
    <string name="text_cancel">Cancelar</string>
    <string name="title_activity_add">AddActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email:</string>
    <string name="password_text">Contraseña:</string>
    <string name="forgot_password_text">Olvidé mi contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="welcome_text">¡Bienvenido!</string>
    <string name="subtitle_text">Introduzca sus datos de inicio</string>
    <string name="login_error_user_pass">Error en el usuario o contraseña</string>
    <string name="login_error">Rellene usuario y contraseña</string>
    <string name="add_accident">Añadir siniestro</string>
    <string name="type_text">Tipo:</string>
    <string name="companyId_text">Id Compañía:</string>
    <string name="totalAmount_text">Precio Total:</string>
    <string name="clientId_text">Id Cliente:</string>
    <string name="supplierId_text">Id Proveedor:</string>
    <string name="id_text">ID:</string>
    <string name="add_text">Añadir</string>
    <string name="get_text">Obtener</string>
    <string name="update_text">Actualizar</string>
</resources>