<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_management_accidents"
            android:icon="@drawable/management_icon"
            android:title="@string/menu_management_accidents" />
        <item
            android:id="@+id/nav_management_clients"
            android:icon="@drawable/management_icon"
            android:title="@string/menu_management_clients" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/text_logout" />
    </group>
</menu>